bugFix: s3-bucket